--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
 
 <body>
   <div id="root"></div>
+  <script src="lib/axios.js"></script>
 
   <script type="module/babel" data-presets="ca-preset" src="app.js"></script>
 
