--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <script src="lib/react.development.js"></script>
   <script src="lib/react-dom.development.js"></script>
   <script src="lib/react-router-dom.min.js"></script>
-
+  <link rel="icon" href="assets/img/appLogo.png" type="image/gif" sizes="16x16">
   <link rel="stylesheet" href="assets/css/main.css">
   <title>Appsus</title>
 </head>
